--- a/APP.CMS/Views/TemporaryBill/View.cshtml
+++ b/APP.CMS/Views/TemporaryBill/View.cshtml
@@ -245,7 +245,10 @@
         @{
             if (Model.Status == (byte)BillStatus.TemporaryTN)
             {
-                <button class="btn btn-success" id="btnCreate">In</button>
+                if (!account.JobPositionName.Trim().ToLower().Contains("kỹ thuật viên"))
+                {
+                    <button class="btn btn-success" id="btnCreate">In</button>
+                }
             }
         }
 
