--- a/APP.CMS/Views/TemporaryBill/_List.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_List.cshtml
@@ -39,45 +39,118 @@
         //@foreach (var item in Model)
         {
             var item = Model[i];
-            <tr id="row_@item.Id">
-                <td style="text-align:center;width:10%;">@item.Id</td>
-                <td style="width:25%;">@item.CustomerName</td>
-                <td style="text-align:center;width:20%">@item.CustomerPhone</td>
-                <td style="text-align:center;width:20%">@item.TimeIn.ToString("dd/MM/yyyy HH:mm:ss")</td>
-                <td style="text-align: center; width: 15%">
-                    @{
-                        if (item.Status == (byte)BillStatus.Bill)
-                        {
-                            <p>@Extensions.GetEnumDescription(BillStatusView.Bill)</p>
-                        }
-                        else
-                        {
-                            <p>@Extensions.GetEnumDescription(BillStatusView.TemporaryTN)</p>
-                        }
+            if (account.JobPositionName.Trim().ToLower().Contains("kỹ thuật viên"))
+            {
+                if (Model.Count() > 0)
+                {
+                    if (item.Status == (byte)BillStatus.TemporaryKTV)
+                    {
+                        <tr class="text-success" id="row_@item.Id">
+                            <td style="text-align:center;width:10%;">@item.Id</td>
+                            <td style="width:25%;">@item.CustomerName</td>
+                            <td style="text-align:center;width:20%">@item.CustomerPhone</td>
+                            <td style="text-align:center;width:20%">@item.TimeIn.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                            <td style="text-align: center; width: 15%">
+                                @{
+                                    if (item.Status == (byte)BillStatus.Bill)
+                                    {
+                                        <p>@Extensions.GetEnumDescription(BillStatusView.Bill)</p>
+                                    }
+                                    else
+                                    {
+                                        <p>@Extensions.GetEnumDescription(BillStatusView.TemporaryTN)</p>
+                                    }
+                                }
+                            </td>
+                            <td style="text-align:center;width:10%;">
+                                @{
+                                    if (account.JobPositionName.ToLower().Trim().Contains("kỹ thuật viên"))
+                                    {
+                                        <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
+                                        <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryTN))"><i class="fas fa-share-square"></i></a>
+                                    }
+                                }
+                            </td>
+                        </tr>
                     }
-                </td>
-                <td style="text-align:center;width:10%;">
-                    @{
-                        if (account.JobPositionName.ToLower().Trim().Contains("thu ngân"))
-                        {
-                            <a class="btn-update" href="/hoa-don/xem?id=@item.Id"><i class="fas fa-eye"></i></a>
-                            @*<a class="btn-update" href="javascript:;" onclick="print(@item.Id,@((int)BillStatus.Bill))"><i class="fas fa-print"></i></a>*@
-                            @*<a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>*@
-                        }
-                        if (account.JobPositionName.ToLower().Trim().Contains("lễ tân"))
-                        {
-                            <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
-                            <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryKTV))"><i class="fas fa-share-square"></i></a>
-                            <a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>
-                        }
-                        if (account.JobPositionName.ToLower().Trim().Contains("kỹ thuật viên"))
-                        {
-                            <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
-                            <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryTN))"><i class="fas fa-share-square"></i></a>
-                        }
+                    if (item.Status == (byte)BillStatus.TemporaryTN)
+                    {
+                        <tr id="row_@item.Id">
+                            <td style="text-align:center;width:10%;">@item.Id</td>
+                            <td style="width:25%;">@item.CustomerName</td>
+                            <td style="text-align:center;width:20%">@item.CustomerPhone</td>
+                            <td style="text-align:center;width:20%">@item.TimeIn.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                            <td style="text-align: center; width: 15%">
+                                @{
+                                    if (item.Status == (byte)BillStatus.Bill)
+                                    {
+                                        <p>@Extensions.GetEnumDescription(BillStatusView.Bill)</p>
+                                    }
+                                    else
+                                    {
+                                        <p>@Extensions.GetEnumDescription(BillStatusView.TemporaryTN)</p>
+                                    }
+                                }
+                            </td>
+                            <td style="text-align:center;width:10%;">
+                                @{
+                                    if (account.JobPositionName.ToLower().Trim().Contains("kỹ thuật viên"))
+                                    {
+                                        <a class="btn-update" href="/hoa-don/xem?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-eye"></i></a>
+                                    }
+                                }
+                            </td>
+                        </tr>
+
                     }
-                </td>
-            </tr>
+
+                }
+            }
+            else
+            {
+                <tr id="row_@item.Id">
+                    <td style="text-align:center;width:10%;">@item.Id</td>
+                    <td style="width:25%;">@item.CustomerName</td>
+                    <td style="text-align:center;width:20%">@item.CustomerPhone</td>
+                    <td style="text-align:center;width:20%">@item.TimeIn.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                    <td style="text-align: center; width: 15%">
+                        @{
+                            if (item.Status == (byte)BillStatus.Bill)
+                            {
+                                <p>@Extensions.GetEnumDescription(BillStatusView.Bill)</p>
+                            }
+                            else
+                            {
+                                <p>@Extensions.GetEnumDescription(BillStatusView.TemporaryTN)</p>
+                            }
+                        }
+                    </td>
+                    <td style="text-align:center;width:10%;">
+                        @{
+                            if (account.JobPositionName.ToLower().Trim().Contains("thu ngân"))
+                            {
+                                <a class="btn-update" href="/hoa-don/xem?id=@item.Id"><i class="fas fa-eye"></i></a>
+                                @*<a class="btn-update" href="javascript:;" onclick="print(@item.Id,@((int)BillStatus.Bill))"><i class="fas fa-print"></i></a>*@
+                                @*<a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>*@
+                            }
+                            if (account.JobPositionName.ToLower().Trim().Contains("lễ tân"))
+                            {
+                                <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
+                                <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryKTV))"><i class="fas fa-share-square"></i></a>
+                                <a href="javascript:;" class="btn-delete" onclick="openDelete(@item.Id)"><i class="fas fa-trash-alt"></i></a>
+                            }
+                            @*if (account.JobPositionName.ToLower().Trim().Contains("kỹ thuật viên"))
+                            {
+                                <a class="btn-update" href="/hoa-don/cap-nhat?id=@item.Id" onclick="openUpdate(@item.Id)"><i class="fas fa-edit"></i></a>
+                                <a class="btn-update" href="javascript:;" onclick="updateStatus(@item.Id,@((int)BillStatus.TemporaryTN))"><i class="fas fa-share-square"></i></a>
+                            }*@
+                        }
+                    </td>
+                </tr>
+
+
+            }
+
         }
     </tbody>
 </table>
