--- a/APP.CMS/Views/TemporaryBill/_List.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_List.cshtml
@@ -73,7 +73,7 @@
                             </td>
                         </tr>
                     }
-                    if (item.Status == (byte)BillStatus.TemporaryTN)
+                    else
                     {
                         <tr id="row_@item.Id">
                             <td style="text-align:center;width:10%;">@item.Id</td>
