--- a/APP.CMS/Views/TemporaryBill/_CreateCustomer.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_CreateCustomer.cshtml
@@ -20,7 +20,7 @@
         <div class="row">
             <label class="col-sm-3 col-md-3 col-6">Ngày sinh</label>
             <div class="col-sm-4 col-md-4 col-12">
-                <input type="date" id="txtNS" class="form-control" placeholder="NN/TT/NNNN" />
+                <input type="date" id="txtNS" max="@DateTime.Now.ToString("yyyy-MM-dd")" class="form-control" placeholder="NN/TT/NNNN" />
             </div>
         </div>
     </div>
