--- a/APP.CMS/Views/MotorManufacture/Index.cshtml
+++ b/APP.CMS/Views/MotorManufacture/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Portal.Utils;
 @{
-    ViewData["Title"] = "Danh sách nhà cung cấp";
+    ViewData["Title"] = "Danh sách hãng xe";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
