--- a/APP.CMS/Views/TemporaryBill/Create.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Create.cshtml
@@ -131,11 +131,11 @@
                     <table id="listService" class="table table-bordered table-hover mb-0">
                         <thead>
                             <tr>
-                                <th style="text-align:center; width:10%">#</th>
-                                <th style="width:40%">Tên dịch vụ</th>
-                                <th style="width:10%">Mã dịch vụ</th>
-                                <th style="width:20%">Đơn giá</th>
-                                <th style="width:20%">Thành tiền</th>
+                                <th style="width:10%;text-align:center;">#</th>
+                                <th style="width:40%;text-align:center;">Tên dịch vụ</th>
+                                <th style="width:10%;text-align:center;">Mã dịch vụ</th>
+                                <th style="width:20%;text-align:center;">Đơn giá(VNĐ)</th>
+                                <th style="width:20%;text-align:center;">Thành tiền(VNĐ)</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -171,13 +171,13 @@
                     <table id="listAccessories" class="table table-bordered table-hover mb-0">
                         <thead>
                             <tr>
-                                <th style="text-align: center; width: 10%">#</th>
-                                <th style="width:30%">Tên phụ tùng</th>
-                                <th style="width:10%">Mã phụ tùng</th>
-                                <th style="width:10%">Đơn giá</th>
-                                <th style="width:10%">Số lượng</th>
-                                <th style="width:10%">ĐVT</th>
-                                <th style="width:20%">Thành tiền</th>
+                                <th style="width:10%;text-align:center;">#</th>
+                                <th style="width:30%;text-align:center;">Tên phụ tùng</th>
+                                <th style="width:10%;text-align:center;">Mã phụ tùng</th>
+                                <th style="width:10%;text-align:center;">Đơn giá(VNĐ)</th>
+                                <th style="width:10%;text-align:center;">Số lượng</th>
+                                <th style="width:10%;text-align:center;">ĐVT</th>
+                                <th style="width:20%;text-align:center;">Thành tiền(VNĐ)</th>
                             </tr>
                         </thead>
                         <tbody>
