--- a/APP.CMS/Views/TemporaryBill/Update.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Update.cshtml
@@ -168,11 +168,11 @@
                         <table id="listService" class="table table-bordered table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th style="width:10%">#</th>
-                                    <th style="width:40%">Tên dịch vụ</th>
-                                    <th style="width:10%">Mã dịch vụ</th>
-                                    <th style="width:20%">Đơn giá</th>
-                                    <th style="width:20%">Thành tiền</th>
+                                    <th style="width:10%;text-align:center;">#</th>
+                                    <th style="width:40%;text-align:center;">Tên dịch vụ</th>
+                                    <th style="width:10%;text-align:center;">Mã dịch vụ</th>
+                                    <th style="width:20%;text-align:center;">Đơn giá</th>
+                                    <th style="width:20%;text-align:center;">Thành tiền</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -189,13 +189,13 @@
                                                 <td style="width:40%">
                                                     @i.ServiceName
                                                 </td>
-                                                <td class="serviceId" style="width:10%">
+                                                <td class="serviceId" style="width:10%;text-align:right;">
                                                     @i.ServiceId
                                                 </td>
-                                                <td class="servicePrice" style="width:20%">
+                                                <td class="servicePrice" style="width:20%;text-align:right;">
                                                     @decimal.Truncate(i.ServicePrice.Value) VNĐ
                                                 </td>
-                                                <td class="TongTien" style="width:20%">
+                                                <td class="TongTien" style="width:20%;text-align:right">
                                                     @decimal.Truncate(i.ServicePrice.Value) VNĐ
                                                 </td>
                                             </tr>
@@ -234,13 +234,13 @@
                         <table id="listAccessories" class="table table-bordered table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th style="width:10%">#</th>
-                                    <th style="width:30%">Tên phụ tùng</th>
-                                    <th style="width:10%">Mã dịch vụ</th>
-                                    <th style="width:10%">Đơn giá</th>
-                                    <th style="width:10%">Số lượng</th>
-                                    <th style="width:10%">ĐVT</th>
-                                    <th style="width:20%">Thành tiền</th>
+                                    <th style="width:10%;text-align:center;">#</th>
+                                    <th style="width:30%;text-align:center;">Tên phụ tùng</th>
+                                    <th style="width:10%;text-align:center;">Mã phụ tùng</th>
+                                    <th style="width:10%;text-align:center;">Đơn giá(VNĐ)</th>
+                                    <th style="width:10%;text-align:center;">Số lượng</th>
+                                    <th style="width:10%;text-align:center;">ĐVT</th>
+                                    <th style="width:20%;text-align:center;">Thành tiền(VNĐ)</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -257,19 +257,19 @@
                                                 <td style="width:30%">
                                                     @i.AccesaryName
                                                 </td>
-                                                <td class="AssId" style="width:10%">
+                                                <td class="AssId" style="width:10%;text-align:right;">
                                                     @i.AccesaryId
                                                 </td>
-                                                <td class="AssPrice" style="width:10%">
-                                                    @decimal.Truncate(i.AccesaryPrice) VNĐ
+                                                <td class="AssPrice" style="width:10%;text-align:right;">
+                                                    @decimal.Truncate(i.AccesaryPrice)
                                                 </td>
                                                 <td class="AssQuantity" style="width:10%">
                                                     <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice)" />
                                                 </td>
-                                                <td style="width: 10% ">
+                                                <td style="width:10%;text-align:center;">
                                                     @i.Unit
                                                 </td>
-                                                <td style="width:20%">
+                                                <td style="width:20%;text-align:right">
                                                     <p class="TongTien" id="TT_@i.AccesaryId">@decimal.Truncate(i.ThanhTien) VNĐ</p>
                                                 </td>
                                             </tr>
@@ -448,11 +448,11 @@
                         <table id="listService" class="table table-bordered table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th style="width:10%">#</th>
-                                    <th style="width:40%">Tên dịch vụ</th>
-                                    <th style="width:10%">Mã dịch vụ</th>
-                                    <th style="width:20%">Đơn giá</th>
-                                    <th style="width:20%">Thành tiền</th>
+                                    <th style="width:10%;text-align:center;">#</th>
+                                    <th style="width:40%;text-align:center;">Tên dịch vụ</th>
+                                    <th style="width:10%;text-align:center;">Mã dịch vụ</th>
+                                    <th style="width:20%;text-align:center;">Đơn giá(VNĐ)</th>
+                                    <th style="width:20%;text-align:center;">Thành tiền(VNĐ)</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -469,13 +469,13 @@
                                                 <td style="width:40%">
                                                     @i.ServiceName
                                                 </td>
-                                                <td class="serviceId" style="width:10%">
+                                                <td class="serviceId" style="width:10%;text-align:right;">
                                                     @i.ServiceId
                                                 </td>
-                                                <td class="servicePrice" style="width:20%">
+                                                <td class="servicePrice" style="width:20%;text-align:right;">
                                                     @decimal.Truncate(i.ServicePrice.Value) VNĐ
                                                 </td>
-                                                <td class="TongTien" style="width:20%">
+                                                <td class="TongTien" style="width:20%;text-align:right">
                                                     @decimal.Truncate(i.ServicePrice.Value) VNĐ
                                                 </td>
                                             </tr>
@@ -514,13 +514,13 @@
                         <table id="listAccessories" class="table table-bordered table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th style="width:10%">#</th>
-                                    <th style="width:30%">Tên phụ tùng</th>
-                                    <th style="width:10%">Mã phụ tùng</th>
-                                    <th style="width:10%">Đơn giá</th>
-                                    <th style="width:10%">Số lượng</th>
-                                    <th style="width:10%">ĐVT</th>
-                                    <th style="width:20%">Thành tiền</th>
+                                    <th style="width:10%;text-align:center;">#</th>
+                                    <th style="width:30%;text-align:center;">Tên phụ tùng</th>
+                                    <th style="width:10%;text-align:center;">Mã phụ tùng</th>
+                                    <th style="width:10%;text-align:center;">Đơn giá(VNĐ)</th>
+                                    <th style="width:10%;text-align:center;">Số lượng</th>
+                                    <th style="width:10%;text-align:center;">ĐVT</th>
+                                    <th style="width:20%;text-align:center;">Thành tiền(VNĐ)</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -530,26 +530,26 @@
                                     {
                                         foreach (var i in listAccessoriesCreated)
                                         {
-                                            <tr>
+                                           <tr>
                                                 <td style="width:10%;text-align:center;">
                                                     <a class="AccXoa" href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                                 </td>
                                                 <td style="width:30%">
                                                     @i.AccesaryName
                                                 </td>
-                                                <td class="AssId" style="width:10%">
+                                                <td class="AssId" style="width:10%;text-align:right;">
                                                     @i.AccesaryId
                                                 </td>
-                                                <td class="AssPrice" style="width:10%">
-                                                    @decimal.Truncate(i.AccesaryPrice) VNĐ
+                                                <td class="AssPrice" style="width:10%;text-align:right;">
+                                                    @decimal.Truncate(i.AccesaryPrice)
                                                 </td>
                                                 <td class="AssQuantity" style="width:10%">
                                                     <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice)" />
                                                 </td>
-                                                <td style="width: 10% ">
+                                                <td style="width:10%;text-align:center;">
                                                     @i.Unit
                                                 </td>
-                                                <td style="width:20%">
+                                                <td style="width:20%;text-align:right">
                                                     <p class="TongTien" id="TT_@i.AccesaryId">@decimal.Truncate(i.ThanhTien) VNĐ</p>
                                                 </td>
                                             </tr>
