--- a/APP.CMS/Views/ImportReceipt/Create.cshtml
+++ b/APP.CMS/Views/ImportReceipt/Create.cshtml
@@ -72,10 +72,10 @@
                         <th style="width:10%">#</th>
                         <th style="width:30%">Tên phụ tùng</th>
                         <th style="width:10%">Mã phụ tùng</th>
-                        <th style="width:10%">Đơn giá nhập</th>
+                        <th style="width:10%">Đơn giá nhập(VNĐ)</th>
                         <th style="width:10%">Số lượng</th>
                         <th style="width:10%">ĐVT</th>
-                        <th style="width:20%">Thành tiền</th>
+                        <th style="width:20%">Thành tiền(VNĐ)</th>
                     </tr>
                 </thead>
                 <tbody>
