--- a/APP.CMS/Views/Shared/_Layout.cshtml
+++ b/APP.CMS/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý sửa xe</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" media="all" />
     <link rel="stylesheet" href="~/css/site.css" />
     <!-- Font Awesome -->
     <link href="~/plugins/fontawesome-free/css/all.min.css" rel="stylesheet" />
