--- a/APP.CMS/Views/TemporaryBill/Update.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Update.cshtml
@@ -193,10 +193,10 @@
                                                     @i.ServiceId
                                                 </td>
                                                 <td class="servicePrice" style="width:20%;text-align:right;">
-                                                    @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                                    @decimal.Truncate(i.ServicePrice.Value)
                                                 </td>
                                                 <td class="TongTien" style="width:20%;text-align:right">
-                                                    @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                                    @decimal.Truncate(i.ServicePrice.Value)
                                                 </td>
                                             </tr>
                                         }
@@ -264,7 +264,7 @@
                                                     @decimal.Truncate(i.AccesaryPrice)
                                                 </td>
                                                 <td class="AssQuantity" style="width:10%">
-                                                    <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice)" />
+                                                    <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice,this)" />
                                                 </td>
                                                 <td style="width:10%;text-align:center;">
                                                     @i.Unit
@@ -473,10 +473,10 @@
                                                     @i.ServiceId
                                                 </td>
                                                 <td class="servicePrice" style="width:20%;text-align:right;">
-                                                    @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                                    @decimal.Truncate(i.ServicePrice.Value)
                                                 </td>
                                                 <td class="TongTien" style="width:20%;text-align:right">
-                                                    @decimal.Truncate(i.ServicePrice.Value) VNĐ
+                                                    @decimal.Truncate(i.ServicePrice.Value)
                                                 </td>
                                             </tr>
                                         }
@@ -544,13 +544,13 @@
                                                     @decimal.Truncate(i.AccesaryPrice)
                                                 </td>
                                                 <td class="AssQuantity" style="width:10%">
-                                                    <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice)" />
+                                                    <input type="number" data-max="@i.MaxQuantity" max="@i.MaxQuantity" value="@i.Quantity" min="1" step="1" id="row2number_@i.AccesaryId" onblur="changeThanhTien(@i.AccesaryId,@i.AccesaryPrice,this)" />
                                                 </td>
                                                 <td style="width:10%;text-align:center;">
                                                     @i.Unit
                                                 </td>
                                                 <td style="width:20%;text-align:right">
-                                                    <p class="TongTien" id="TT_@i.AccesaryId">@decimal.Truncate(i.ThanhTien) VNĐ</p>
+                                                    <p class="TongTien" id="TT_@i.AccesaryId">@decimal.Truncate(i.ThanhTien)</p>
                                                 </td>
                                             </tr>
                                         }
