--- a/APP.CMS/Views/TemporaryBill/View.cshtml
+++ b/APP.CMS/Views/TemporaryBill/View.cshtml
@@ -33,12 +33,12 @@
                 <div class="row align-items-center p-2">
                     <label class="col-md-3">Số điện thoại: </label>
                     <label>@customer.Phone</label>
-                    
+
                 </div>
             </div>
         </div>
     </div>
-        <div class="">
+    <div class="">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 <div class="row align-items-center p-2">
@@ -208,7 +208,7 @@
                     @{
                         var createdBy = ViewData["CreatedBy"] as APP.MODELS.Accounts;
                     }
-                <label readonly id="txtCreatedBy" data-id="@createdBy.Id">@createdBy.EmployeeName</label>
+                    <label readonly id="txtCreatedBy" data-id="@createdBy.Id">@createdBy.EmployeeName</label>
                 </div>
             </div>
             <div class="col-sm-6 col-md-6 col-12 pl-4">
@@ -226,9 +226,9 @@
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 @*@{
-                    var printedBy = ViewData["PrintedBy"] as APP.MODELS.Accounts;
-                }
-                <label readonly id="txtPrintedBy" data-id="@printedBy.Id">@printedBy.EmployeeName</label>*@
+                        var printedBy = ViewData["PrintedBy"] as APP.MODELS.Accounts;
+                    }
+                    <label readonly id="txtPrintedBy" data-id="@printedBy.Id">@printedBy.EmployeeName</label>*@
             </div>
             <div class="col-sm-6 col-md-6 col-12 pl-4">
                 <div class="float-right">
@@ -241,58 +241,51 @@
 </div>
 <div class="form-horizontal mt-2">
     <div class="d-flex justify-content-center">
-        <button class="btn btn-danger mr-1" id="btnExist">Trở về</button>
+        <button class="printPageButton btn btn-danger mr-1" id="btnExist">Trở về</button>
         @{
             if (Model.Status == (byte)BillStatus.TemporaryTN)
             {
                 if (!account.JobPositionName.Trim().ToLower().Contains("kỹ thuật viên"))
                 {
-                    <button class="btn btn-success" id="btnCreate">In</button>
+                    <button class="btn btn-success printPageButton" id="btnCreate">In</button>
                 }
             }
         }
 
     </div>
 </div>
+<script src="~/plugins/PrintThis/printThis.js"></script>
+<script src="~/js/Bill/View.js"></script>
+
 <script>
-    $(function () {
-        $('#btnExist').click(function () {
-            location.href = "/hoa-don/danh-sach";
-        })
-    })
-    window.addEventListener('load', function () {
-        TinhTongTien();
-    })
-    function TinhTongTien() {
-        var TongTien = 0;
-        $('.TongTien').each(function () {
-            TongTien = TongTien + parseInt($(this).text().replace("VNĐ", "").trim());
-        });
-        TongTien = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(TongTien).replace("₫", "").trim();
-        $('#txtTongTien').text('');
-        $('#txtTongTien').text(TongTien+" VNĐ");
-    }
-    $('#btnCreate').on('click', function () {
-        updateStatus($('#txtId').text(), 4);
-    })
-    function updateStatus(id, status) {
-        $.ajax({
-            url: "/hoa-don/update-status?id=" + id + "&status=" + status,
-            method: "Get",
-        }).then(function () {
-                var html = "<html>";
-                html += $('#frmView').html();
-
-                html += "</html>";
-
-                var printWin = window.open('', '', 'left=0,top=0,width=1,height=1,toolbar=0,scrollbars=0,status  =0');
-                printWin.document.write(html);
-                printWin.document.close();
-                printWin.focus();
-                printWin.print();
-                printWin.close();
-        });
-    }
+    //$(function () {
+    //    $('#btnExist').click(function () {
+    //        location.href = "/hoa-don/danh-sach";
+    //    })
+    //})
+    //window.addEventListener('load', function () {
+    //    TinhTongTien();
+    //})
+    //function TinhTongTien() {
+    //    var TongTien = 0;
+    //    $('.TongTien').each(function () {
+    //        TongTien = TongTien + parseInt($(this).text().replace("VNĐ", "").trim());
+    //    });
+    //    TongTien = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(TongTien).replace("₫", "").trim();
+    //    $('#txtTongTien').text('');
+    //    $('#txtTongTien').text(TongTien+" VNĐ");
+    //}
+    //$('#btnCreate').on('click', function () {
+    //    updateStatus($('#txtId').text(), 4);
+    //})
+    //function updateStatus(id, status) {
+    //    $.ajax({
+    //        url: "/hoa-don/update-status?id=" + id + "&status=" + status,
+    //        method: "Get",
+    //    }).then(function () {
+    //        $("#frmView").printThis();
+    //    });
+    //}
 </script>
 
 
