--- a/APP.CMS/Views/TemporaryBill/_PhuTung.cshtml
+++ b/APP.CMS/Views/TemporaryBill/_PhuTung.cshtml
@@ -13,7 +13,7 @@
         @decimal.Truncate(Model.Price)
     </td>
     <td class="AssQuantity" style="width:10%">
-        <input type="number" data-max="@Model.Quantity" onblur="changeThanhTien(@Model.Id,@Model.Price)" min="1" value="1" step="1" max="@Model.Quantity" id="row2number_@Model.Id" />
+        <input type="number" data-max="@Model.Quantity" onblur="changeThanhTien(@Model.Id,@Model.Price,this)" min="1" value="1" step="1" max="@Model.Quantity" id="row2number_@Model.Id" />
     </td>
     <td style="width:10%;text-align:center;">
         @Model.Unit
