--- a/APP.CMS/Views/TemporaryBill/Index.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Index.cshtml
@@ -39,6 +39,7 @@
                                 <select id="drStatus" class="form-control">
                                     <option value="3">Phiếu tạm tính</option>
                                     <option value="4">Hóa đơn</option>
+                                    <option value="5">Đã thanh toán</option>
                                 </select>
                             </div>
                             <div class="col-sm-2 col-md-2 col-6">
