--- a/APP.CMS/Views/BCTKDoanhThuNgay/Index.cshtml
+++ b/APP.CMS/Views/BCTKDoanhThuNgay/Index.cshtml
@@ -16,7 +16,7 @@
                             <button id="btnSearch" class="btn btn-primary">Tìm kiếm</button>
                         </div>
                         <div class="col-sm-4 col-md-4 col-6">
-                             <button id="btnExport" class="btn btn-success float-right">Xuất exel</button>
+                             <button id="btnExport" class="btn btn-success float-right">Xuất báo cáo(pdf)</button>
                         </div>
                     </div>
                 </div>
