--- a/APP.CMS/Views/Shared/_Layout.cshtml
+++ b/APP.CMS/Views/Shared/_Layout.cshtml
@@ -46,6 +46,13 @@
     <script src="~/plugins/bootstrap/js/bootstrap.js"></script>
     <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- JQVMap -->
+    <!--jsPDF-->
+
+    <script src="~/plugins/jsPDF/jspdf.min.js"></script>
+    <!--pdfmake-->
+    <script src="~/plugins/pdfmake/pdfmake.js"></script>
+    <script src="~/plugins/pdfmake/vfs_fonts.js"></script>
+    <script src="~/plugins/pdfmake/browser.js"></script>
     <!--Select 2-->
     <script src="~/plugins/select2/js/select2.min.js"></script>
 
