--- a/APP.CMS/Views/TemporaryBill/Index.cshtml
+++ b/APP.CMS/Views/TemporaryBill/Index.cshtml
@@ -25,7 +25,7 @@
     }
 }
 @{
-    if (account.JobPositionName.ToLower().Trim().Contains("thu ngân"))
+    if (account.JobPositionName.ToLower().Trim().Contains("thu ngân") || account.JobPositionName.ToLower().Trim().Contains("quản trị viên"))
     {
         <div class="row">
             <div class="col-12">
@@ -39,7 +39,6 @@
                                 <select id="drStatus" class="form-control">
                                     <option value="3">Phiếu tạm tính</option>
                                     <option value="4">Hóa đơn</option>
-                                    <option value="5">Đã thanh toán</option>
                                 </select>
                             </div>
                             <div class="col-sm-2 col-md-2 col-6">
