--- a/APP.CMS/Views/TemporaryBill/View.cshtml
+++ b/APP.CMS/Views/TemporaryBill/View.cshtml
@@ -243,7 +243,7 @@
     <div class="d-flex justify-content-center">
         <button class="printPageButton btn btn-danger mr-1" id="btnExist">Trở về</button>
         @{
-            if (Model.Status == (byte)BillStatus.TemporaryTN)
+            if (Model.Status == (byte)BillStatus.TemporaryTN || Model.Status == (byte)BillStatus.Bill)
             {
                 if (!account.JobPositionName.Trim().ToLower().Contains("kỹ thuật viên"))
                 {
